--- a/src/style.css
+++ b/src/style.css
@@ -23,10 +23,9 @@ body {
 /* Testi */
 h1 {
 	margin: 0;
-	margin-left: 7vh;
 	margin-right: 10vh;
 	font-size: 40px;
-	color: rgb(255, 255, 0)
+	color: rgb(255, 255, 0);
 }
 
 .title {
@@ -40,24 +39,8 @@ p {
 	color: rgb(255, 255, 255);
 }
 
-button {
-	padding: 20px;
-	background-color: rgb(255, 255, 0);
-	font-size: 18px;
-	color: rgb(0, 0, 0);
-	border: none;
-	border-radius: 100%;
-}
-
-input {
-	padding: 15px;
-	margin-top: 15px;
-	background-color: rgb(0, 0, 0);
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	color: rgba(255, 255, 255, 0.5);
-	border: solid;
-	border-color: rgb(255, 200, 0);
-	border-radius: 5px;
+a {
+	text-decoration: none;
 }
 
 .home {
@@ -67,18 +50,6 @@ input {
 	position: relative;
 	display: block;
 }
-
-	.home>a {
-		font-size: 18px;
-		text-decoration: none;
-		color: rgb(255,255,255);
-	}
-
-	.home>img {
-		max-width: 100%;
-		transition: transform 0.25s ease;
-		cursor: zoom-in;
-	}
 
 /* Contenuto */
 .container {
