--- a/src/style.css
+++ b/src/style.css
@@ -29,14 +29,12 @@ h1 {
 }
 
 .title {
-	margin-left: 0;
-	font-size: 90px;
-	color: rgb(255, 255, 0)
+	font-size: 70px;
 }
 
 p {
 	font-size: 30px;
-	color: rgb(255, 255, 255);
+	color: rgb(225, 225, 225);
 }
 
 a {
@@ -72,20 +70,19 @@ a {
 
 
 /* Responsive versione mobile */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
 	h1 {
 		font-size: 20px;
-		margin-left: 5vh;
 		margin-right: 20vh;
 	}
 
 	.banner {
-		height: 150px;
+		height: 350px;
 	}
 
-	.banner>img {
+	/* .banner>img {
 		display: none;
-	}
+	} */
 
 	.title {
 		font-size: 40px;
