--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,16 @@ p {
 	color: rgb(225, 225, 225);
 }
 
+.evidenziatore {
+	font-size: 30px;
+	color: rgb(255, 255, 0);
+}
+
+span {
+	font-size: 18px;
+	color: rgb(120, 120, 120);
+}
+
 a {
 	font-size: 30px;
 	color: rgb(225, 225, 0);
