--- a/src/style.css
+++ b/src/style.css
@@ -89,6 +89,10 @@ a {
 /* Responsive versione mobile */
 @media only screen and (max-width: 800px) {
 	h1 {
+		font-size: 10px;
+	}
+
+	a {
 		font-size: 20px;
 	}
 
