--- a/src/style.css
+++ b/src/style.css
@@ -86,10 +86,10 @@ a {
 	}
 
 
-/* Responsive versione mobile */
+/* Responsive versione tablet */
 @media only screen and (max-width: 800px) {
 	h1 {
-		font-size: 10px;
+		font-size: 20px;
 	}
 
 	a {
@@ -109,12 +109,8 @@ a {
 		font-size: 40px;
 	}
 
-	.container>img {
-		max-width: 100%;
-	}
-
-	.container>a {
-		font-size: 20px;
-	}
-
   }
+
+  /* Responsive versione mobile */
+@media only screen and (max-width: 400px) {
+}
